# mcp-client-backend

./: .env.example  .gitignore  README.md  enhanced_mcp_client.py  explore_memory.py  main.py  pyproject.toml  server.py  server_config.json.example
collections/: Enhanced_MCP_ChatBot_API.postman_collection.json
src/: __init__.py
src/api/: __init__.py  chat.py  legacy.py  mcp.py  routes.py  sessions.py  system.py
src/core/: __init__.py  config.py
src/models/: __init__.py  schemas.py
src/services/: chatbot_service.py
src/websocket/: __init__.py  handler.py
